Troydon-Resume-Online(NET Core)/wwwroot/css/styles.css
/*
Color Palette
#1b114f - dark blue
#8D99AE - light blue
#EDF2F4 - blue/white
rgb(52, 164, 230) - light blue button
#color: rgb(15, 66, 207) - a dark blue
=============================*/

/*
Global Styles
=============================*/
/* apply a natural box layout model to all elements, but allowing components to change */
html {
    box-sizing: border-box;
}
  *, *:before, *:after {
    box-sizing: inherit;
    
  }
body {
    font-family: 'Saira Semi Condensed', sans-serif;
    margin: 0;
    background-color: #EDF2F4;
}
h1,h2 {
    font-family: 'Fresca', sans-serif;
    font-weight: 400;
}
h1 {
    font-size: 80px;
}
h2 {
    font-size: 42px;
    margin-top: 0;
}
h3 {
    margin: 0;
}
a {
    color: rgb(15, 66, 207);
}
a:hover {
    text-decoration: none;
}
.content-wrap {
    max-width: 950px;
    margin: 0 auto; 
    padding: 60px 50px;
    overflow:auto;
}
.btn {
    text-decoration: none;
    background: rgb(52, 164, 230);
    color: white;
    padding: 10px;
    display: inline-block;
}

.secondary {
    padding: 20px;
    margin: 20px;
}
/*
Header and footer
=============================*/

header, footer {
    background: #1b114f;
    color: #8D99AE;
}
/*header*/
header {
    padding-top: 50px;
    position: relative;
}
header h1, header h2 {
    color: #EDF2F4;
    margin: 0;
}
.profile-pic {
    border-radius: 50%;
}
.download {
    position: absolute;
    top: 80px;
    right: 0;
}
/*footer*/
footer {

}
.contact-info a {

    padding: 20px;
    display: inline-block;
}
.contact-info a:hover {
    background: rgb(52, 164, 230);
}
p.uppercase {
    text-transform: uppercase;
}

/*
Navigation
=============================*/
nav {
    text-align: center;
    background: white;
    position: fixed;
    top: 0;
    width: 100%;
}   
nav a {
    display: inline-block;
    padding: 15px 20px;
    text-decoration: none;
    text-transform: uppercase;
    font-weight: 700;
    
    margin: 0;
}
    nav a:hover {
        background: rgb(52, 164, 230);
        border-style: none;
        border-color: rgb(15, 66, 207);
    }

i.fas, i.fab {
    opacity: 0.4;
  }

/*
Work Experience
=============================*/
.work {
    background: #EDF2F4;
}
h3 ~ p {
    margin: 0;
}
.job-description p:first-of-type {
    margin-top: 0;
}
.job-description {
    margin-bottom: 10px;
}

/*
Education
=============================*/
.education {
    background: linear-gradient(rgb(141, 153, 174, 0.8),rgb(141, 153, 174, 0.7)),
                url(../images/sydney.jpg) no-repeat fixed;
                background-size: 100%;
}
p + h3 {
    margin-top: 30px;
}

/*
Media Queries
=============================*/
@media (min-width: 900px) {
    .col-narrow {
        width: 30%;
        float: left;
        padding: 20px;
    }
    .col-wide {
        width: 70%;
        float: left;
        padding: 20px;
    }
}
@media (max-width: 899px) {
    header {
        text-align: center;
    }
    profile-pic {
        width: 200px;
    }
}
@media (max-width: 495px) {
    .download {
        position: relative;
        bottom: 0;
    }
}

/*
Error Messages
=============================*/
.error, .field-validation-error, .validation-summary-errors {
    color: red;
    font-weight: bold;
}

.field-validation-error {
    display: block;
}
.input-validation-error {
    /*TO DO*/
}

.validation-summary-errors {
    /*TO DO*/
}

